Add posters and fix for loading times

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -8,25 +8,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   </head>
 
   <body class="container">
     <!-- Navigation -->
     <div class="nav-container">
       <p>
-        <a href="index.html">Home</a> &nbsp;|&nbsp;
-        <a href="activities/index.html">Activities</a> &nbsp;|&nbsp;
-        <a href="awards/index.html">Awards</a> &nbsp;|&nbsp;
-        <a href="demos/index.html">Demos</a> &nbsp;|&nbsp;
-        <a href="funding/index.html">Funding</a> &nbsp;|&nbsp;
-        <a href="members/index.html">Members</a> &nbsp;|&nbsp;
+        <a href="index.html">Home</a> &nbsp;|&nbsp; <a href="activities/index.html">Activities</a> &nbsp;|&nbsp;
+        <a href="awards/index.html">Awards</a> &nbsp;|&nbsp; <a href="demos/index.html">Demos</a> &nbsp;|&nbsp;
+        <a href="funding/index.html">Funding</a> &nbsp;|&nbsp; <a href="members/index.html">Members</a> &nbsp;|&nbsp;
         <a href="news-journal/index.html">NewsLog</a> &nbsp;|&nbsp;
-        <a href="patents/index.html">Patents</a> &nbsp;|&nbsp;
-        <a href="projects/index.html">Projects</a> &nbsp;|&nbsp;
+        <a href="patents/index.html">Patents</a> &nbsp;|&nbsp; <a href="projects/index.html">Projects</a> &nbsp;|&nbsp;
         <a href="publications/index.html">Publications</a>
       </p>
     </div>
@@ -40,24 +33,20 @@
           <name>About AI4Society</name>
         </p>
         <p align="justify">
-          Historically, AI has done well only when not near humans. AI for Society (AI4S) group at
-          the <a href="//aiisc.ai/" target="_blank">AI Institute</a> is focused on enabling people
-          to make rational decisions despite real-world complexities of poor data, changing goals,
-          and limited resources by augmenting their cognitive limitations with technology. Lead by
-          <a href="https://sites.google.com/site/biplavsrivastava" target="_blank">
-            Prof. Biplav Srivastava</a
-          >, the group works in neuro-symbolic methods, trusted AI, and applications of data-driven
-          methods to society. We innovate as well as apply AI techniques for hard problems facing
-          the society with an inclusive, value-driven, focus.
+          Historically, AI has done well only when not near humans. AI for Society (AI4S) group at the
+          <a href="//aiisc.ai/" target="_blank">AI Institute</a> is focused on enabling people to make rational
+          decisions despite real-world complexities of poor data, changing goals, and limited resources by augmenting
+          their cognitive limitations with technology. Lead by
+          <a href="https://sites.google.com/site/biplavsrivastava" target="_blank"> Prof. Biplav Srivastava</a>, the
+          group works in neuro-symbolic methods, trusted AI, and applications of data-driven methods to society. We
+          innovate as well as apply AI techniques for hard problems facing the society with an inclusive, value-driven,
+          focus.
         </p>
 
         <div style="padding: 6px 10px; border-radius: 5px; margin: 10px 0 24px 0">
           <p align="justify" style="margin: 0; line-height: 1.3">
             Our <b>differentiating initiatives</b> are in working with, including
-            <a
-              href="https://ai4society.github.io/planfm/"
-              target="_blank"
-              class="initiative-group group-planning"
+            <a href="https://ai4society.github.io/planfm/" target="_blank" class="initiative-group group-planning"
               >training</a
             >, large language models and
             <a
@@ -78,17 +67,11 @@
               class="initiative-group group-assessment"
               >assessment and rating for AI</a
             >
-            (<a
-              href="https://pypi.org/project/GAICo/"
-              target="_blank"
-              class="initiative-group group-assessment"
+            (<a href="https://pypi.org/project/GAICo/" target="_blank" class="initiative-group group-assessment"
               >GAICO</a
             >
             and
-            <a
-              href="http://casy.cse.sc.edu/causal_rating"
-              target="_blank"
-              class="initiative-group group-assessment"
+            <a href="http://casy.cse.sc.edu/causal_rating" target="_blank" class="initiative-group group-assessment"
               >ARC</a
             >
             tools),
@@ -98,10 +81,7 @@
               class="initiative-group group-tools"
               >group recommendation</a
             >, metacognition-based
-            <a
-              href="https://github.com/ai4society/sofai_tool/"
-              target="_blank"
-              class="initiative-group group-tools"
+            <a href="https://github.com/ai4society/sofai_tool/" target="_blank" class="initiative-group group-tools"
               >SOFAI tool</a
             >
             to combine fast (e.g., LLMs) and slow thinking (e.g., reasoners), and exploring AI like
@@ -153,9 +133,7 @@
             <div class="timeline-content">
               <p>
                 <a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a>
-                will defend his dissertation, "<i
-                  >Rating AI Models for Robustness Through a Causal Lens</i
-                >", on Feb 04.
+                will defend his dissertation, "<i>Rating AI Models for Robustness Through a Causal Lens</i>", on Feb 04.
               </p>
             </div>
           </div>
@@ -180,30 +158,33 @@
               <ul class="aaai-event-list">
                 <li>
                   <a href="https://arxiv.org/abs/2508.16753" target="_blank">
-                    <i>GAICo: A Deployed and Extensible Framework for Evaluating Diverse and Multimodal Generative AI Outputs</i>
-                  </a> (IAAI/AAAI-26)
-                  <br /><span class="booth-highlight">Jan 23, Friday</span>
+                    <i
+                      >GAICo: A Deployed and Extensible Framework for Evaluating Diverse and Multimodal Generative AI
+                      Outputs</i
+                    >
+                  </a>
+                  (IAAI/AAAI-26) <br /><span class="booth-highlight">Jan 23, Friday</span>
                 </li>
 
                 <li>
                   <a href="publications/papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank">
                     <i>GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation</i>
-                  </a> (Demo)
-                  <br /><span class="booth-highlight">Jan 23, Friday - Booth 12 (Hall 3)</span>
+                  </a>
+                  (Demo) <br /><span class="booth-highlight">Jan 23, Friday - Booth 12 (Hall 3)</span>
                 </li>
 
                 <li>
                   <a href="publications/papers_local/AAAI_26_Demo_MAPF_Ontology.pdf" target="_blank">
                     <i>OMEGA: An Ontology-Driven Tool for Explaining Multi-Agent Path Finding</i>
-                  </a> (Demo)
-                  <br /><span class="booth-highlight">Jan 24, Saturday - Booth 6 (Hall 2)</span>
+                  </a>
+                  (Demo) <br /><span class="booth-highlight">Jan 24, Saturday - Booth 6 (Hall 2)</span>
                 </li>
 
                 <li>
                   <a href="publications/papers_local/chatsparent_aaai_demo.pdf" target="_blank">
                     <i>Chatsparent: An Interactive System for Detecting and Mitigating Cognitive Fatigue in LLMs</i>
-                  </a> (Demo)
-                  <br /><span class="booth-highlight">Jan 23, Friday - Booth 5 (Hall 2)</span>
+                  </a>
+                  (Demo) <br /><span class="booth-highlight">Jan 23, Friday - Booth 5 (Hall 2)</span>
                 </li>
               </ul>
             </div>
@@ -285,15 +266,13 @@
 
             <div class="spotlight-activity">
               AI4Society is organizing
-              <a href="https://icaps27.icaps-conference.org/home/" target="_blank">
-                <b>ICAPS 2027</b></a
-              >
+              <a href="https://icaps27.icaps-conference.org/home/" target="_blank"> <b>ICAPS 2027</b></a>
               at <b>Columbia, South Carolina</b>.
             </div>
 
             <div class="spotlight-activity">
-              We organized a highly successful, day-long, free community outreach event focused on
-              the role of AI in keeping senior citizens safe and independent called
+              We organized a highly successful, day-long, free community outreach event focused on the role of AI in
+              keeping senior citizens safe and independent called
               <b
                 ><a href="https://sites.google.com/cse.sc.edu/safe-ai-for-seniors" target="_blank"
                   >AIx: Safe AI for Seniors</a
@@ -313,17 +292,49 @@
 
             <div class="poster-carousel-container" id="posterCarouselContainer">
               <div class="poster-carousel-wrapper">
-                <div class="poster-slide active" data-poster-url="spotlight/omega_poster_AAAI-2026.png" data-caption="OMEGA - AAAI 2026">
-                  <img src="spotlight/omega_poster_AAAI-2026.png" alt="OMEGA - AAAI 2026" class="poster-carousel-img" />
+                <div
+                  class="poster-slide active"
+                  data-poster-url="publications/posters/omega_poster_AAAI-2026.png"
+                  data-caption="OMEGA - AAAI 2026"
+                >
+                  <img
+                    src="publications/posters/thumbnails/omega_poster_AAAI-2026.png"
+                    alt="OMEGA - AAAI 2026"
+                    class="poster-carousel-img"
+                  />
                 </div>
-                <div class="poster-slide" data-poster-url="spotlight/poster_GAICo.png" data-caption="GAICo Demo - AAAI 2026">
-                  <img src="spotlight/poster_GAICo.png" alt="GAICo Demo - AAAI 2026" class="poster-carousel-img" />
+                <div
+                  class="poster-slide"
+                  data-poster-url="publications/posters/poster_GAICo.png"
+                  data-caption="GAICo Demo - AAAI 2026"
+                >
+                  <img
+                    src="publications/posters/thumbnails/poster_GAICo.png"
+                    alt="GAICo Demo - AAAI 2026"
+                    class="poster-carousel-img"
+                  />
                 </div>
-                <div class="poster-slide" data-poster-url="spotlight/NeurIPS-24-Poster.png" data-caption="MisInfo - NeurIPS 2025">
-                  <img src="spotlight/NeurIPS-24-Poster.png" alt="MisInfo - NeurIPS 2025" class="poster-carousel-img" />
+                <div
+                  class="poster-slide"
+                  data-poster-url="publications/posters/NeurIPS-24-Poster.png"
+                  data-caption="MisInfo - NeurIPS 2025"
+                >
+                  <img
+                    src="publications/posters/thumbnails/NeurIPS-24-Poster.png"
+                    alt="MisInfo - NeurIPS 2025"
+                    class="poster-carousel-img"
+                  />
                 </div>
-                <div class="poster-slide" data-poster-url="spotlight/AAAI-IAAI-2024-ULTRA-Poster.png" data-caption="ULTRA - AAAI 2024">
-                  <img src="spotlight/AAAI-IAAI-2024-ULTRA-Poster.png" alt="ULTRA - AAAI 2024" class="poster-carousel-img" />
+                <div
+                  class="poster-slide"
+                  data-poster-url="publications/posters/AAAI-IAAI-2024-ULTRA-Poster.png"
+                  data-caption="ULTRA - AAAI 2024"
+                >
+                  <img
+                    src="publications/posters/thumbnails/AAAI-IAAI-2024-ULTRA-Poster.png"
+                    alt="ULTRA - AAAI 2024"
+                    class="poster-carousel-img"
+                  />
                 </div>
               </div>
 
@@ -413,9 +424,7 @@
           <div class="genealogy-node">
             <div class="genealogy-node-circle">BS</div>
             <div class="genealogy-node-name">
-              <a href="https://sites.google.com/site/biplavsrivastava/home" target="_blank"
-                >Srivastava</a
-              >
+              <a href="https://sites.google.com/site/biplavsrivastava/home" target="_blank">Srivastava</a>
             </div>
             <div class="genealogy-node-role">Advisor</div>
           </div>
@@ -444,42 +453,64 @@
           <span class="poster-popup-close">&times;</span>
         </div>
 
-        <p class="poster-popup-subtitle">
-          Our research presentations at major AI conferences
-        </p>
+        <p class="poster-popup-subtitle">Our research presentations at major AI conferences</p>
 
         <div class="poster-popup-grid">
           <!-- AAAI 2026 -->
           <a href="projects/ontology/files/omega_poster_AAAI-2026.pdf" target="_blank" class="poster-popup-item">
-            <img src="spotlight/omega_poster_AAAI-2026.png" alt="OMEGA - AAAI 2026" class="poster-popup-thumbnail" />
+            <img
+              src="publications/posters/thumbnails/omega_poster_AAAI-2026.png"
+              alt="OMEGA - AAAI 2026"
+              class="poster-popup-thumbnail"
+            />
             <div class="poster-popup-caption">OMEGA - AAAI 2026</div>
           </a>
 
           <a href="publications/papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank" class="poster-popup-item">
-            <img src="spotlight/poster_GAICo.png" alt="GAICo Demo - AAAI 2026" class="poster-popup-thumbnail" />
+            <img
+              src="publications/posters/thumbnails/poster_GAICo.png"
+              alt="GAICo Demo - AAAI 2026"
+              class="poster-popup-thumbnail"
+            />
             <div class="poster-popup-caption">GAICo Demo - AAAI 2026</div>
           </a>
 
           <!-- NeurIPS 2025 -->
-          <a href="spotlight/NeurIPS-24-Poster.png" target="_blank" class="poster-popup-item">
-            <img src="spotlight/NeurIPS-24-Poster.png" alt="MisInfo - NeurIPS 2025" class="poster-popup-thumbnail" />
+          <a href="publications/posters/NeurIPS-24-Poster.png" target="_blank" class="poster-popup-item">
+            <img
+              src="publications/posters/thumbnails/NeurIPS-24-Poster.png"
+              alt="MisInfo - NeurIPS 2025"
+              class="poster-popup-thumbnail"
+            />
             <div class="poster-popup-caption">MisInfo - NeurIPS 2025</div>
           </a>
 
           <!-- AAAI 2024 -->
           <a href="publications/papers_local/AAAI-24_Demo_Poster.pdf" target="_blank" class="poster-popup-item">
-            <img src="spotlight/AAAI-24_Demo_Poster.png" alt="InfoSpread Demo - AAAI 2024" class="poster-popup-thumbnail" />
+            <img
+              src="publications/posters/thumbnails/AAAI-24_Demo_Poster.png"
+              alt="InfoSpread Demo - AAAI 2024"
+              class="poster-popup-thumbnail"
+            />
             <div class="poster-popup-caption">InfoSpread Demo - AAAI 2024</div>
           </a>
 
           <a href="publications/papers_local/AAAI-IAAI-2024-ULTRA-Poster.pdf" target="_blank" class="poster-popup-item">
-            <img src="spotlight/AAAI-IAAI-2024-ULTRA-Poster.png" alt="ULTRA - AAAI 2024" class="poster-popup-thumbnail" />
+            <img
+              src="publications/posters/thumbnails/AAAI-IAAI-2024-ULTRA-Poster.png"
+              alt="ULTRA - AAAI 2024"
+              class="poster-popup-thumbnail"
+            />
             <div class="poster-popup-caption">ULTRA - AAAI 2024</div>
           </a>
 
           <!-- IAAI 2023 -->
-          <a href="spotlight/power-IAAI.jpg" target="_blank" class="poster-popup-item">
-            <img src="spotlight/power-IAAI.jpg" alt="PowerIoT - IAAI 2023" class="poster-popup-thumbnail" />
+          <a href="publications/posters/power-IAAI.jpg" target="_blank" class="poster-popup-item">
+            <img
+              src="publications/posters/thumbnails/power-IAAI.jpg"
+              alt="PowerIoT - IAAI 2023"
+              class="poster-popup-thumbnail"
+            />
             <div class="poster-popup-caption">PowerIoT - IAAI 2023</div>
           </a>
         </div>
@@ -519,8 +550,12 @@
 
       function showSlideAtIndex(n) {
         var i;
-        if (n > slides.length) { slideIndex = 1; }
-        if (n < 1) { slideIndex = slides.length; }
+        if (n > slides.length) {
+          slideIndex = 1;
+        }
+        if (n < 1) {
+          slideIndex = slides.length;
+        }
 
         for (i = 0; i < slides.length; i++) {
           slides[i].style.display = "none";
@@ -575,8 +610,12 @@
 
       function showPosterSlide(n) {
         var i;
-        if (n > posterSlides.length) { posterSlideIndex = 1; }
-        if (n < 1) { posterSlideIndex = posterSlides.length; }
+        if (n > posterSlides.length) {
+          posterSlideIndex = 1;
+        }
+        if (n < 1) {
+          posterSlideIndex = posterSlides.length;
+        }
 
         for (i = 0; i < posterSlides.length; i++) {
           posterSlides[i].classList.remove("active");
@@ -629,9 +668,11 @@
 
       posterPopupClose.onclick = closePosterPopup;
 
-      posterCarouselContainer.addEventListener("click", function(e) {
-        if (e.target.classList.contains("poster-carousel-prev") ||
-            e.target.classList.contains("poster-carousel-next")) {
+      posterCarouselContainer.addEventListener("click", function (e) {
+        if (
+          e.target.classList.contains("poster-carousel-prev") ||
+          e.target.classList.contains("poster-carousel-next")
+        ) {
           return;
         }
         // Open the current poster directly
@@ -644,13 +685,13 @@
         }
       });
 
-      posterPopup.addEventListener("click", function(e) {
+      posterPopup.addEventListener("click", function (e) {
         if (e.target === posterPopup) {
           closePosterPopup();
         }
       });
 
-      document.addEventListener("keydown", function(e) {
+      document.addEventListener("keydown", function (e) {
         if (e.key === "Escape" && posterPopup.classList.contains("visible")) {
           closePosterPopup();
         }
