--- a/publications/index.html
+++ b/publications/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -98,7 +98,7 @@
           </li>
 
           <li class="paper-has-poster">
-            <div class="paper-item-layout">
+            <div class="paper-item-layout" style="align-items: center">
               <div class="paper-details">
                 <b
                   >GAICo: A Deployed and Extensible Framework for Evaluating Diverse and Multimodal Generative AI
@@ -113,20 +113,36 @@
                 Nitin Gupta, Pallav Koppisetti, Kausik Lakkaraju, Biplav Srivastava
                 <br />
                 <a href="https://arxiv.org/abs/2508.16753" target="_blank">[Paper]</a>
-                <a href="papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank">[Poster]</a>
                 <span class="tag tag-type">Conference</span>
+                <span class="tag tag-method">Trust Rating</span>
+                <br />
+                <br />
+                <b>GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation</b><br />
+                <i
+                  >Proceedings of the Thirty-Ninth AAAI Conference on Artificial Intelligence - Demonstrations Track
+                  (AAAI-26 Demo), Singapore, January 2026 (AR=27%)</i
+                ><br />
+                Pallav Koppisetti, Nitin Gupta, Kausik Lakkaraju, Biplav Srivastava
+                <br />
+                <a href="papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank">[Paper]</a>
+                <a href="https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/view" target="_blank"
+                  >[Video]</a
+                >
+                <a href="papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank">[Poster]</a>
+                <span class="tag tag-type">Demo</span>
                 <span class="tag tag-method">Trust Rating</span>
                 <br />
               </div>
               <div class="paper-poster">
                 <a
-                  href="../spotlight/poster_GAICo.png"
+                  href="./posters/poster_GAICo.png"
                   target="_blank"
                   title="Click to view full poster"
                   aria-label="View poster for GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation"
                 >
                   <img
-                    src="../spotlight/poster_GAICo.png"
+                    loading="lazy"
+                    src="./posters/thumbnails/poster_GAICo.png"
                     alt="Poster thumbnail for GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation"
                   />
                 </a>
@@ -146,41 +162,6 @@
             <a href="https://www.youtube.com/watch?v=ktqkZyYWDDE" target="_blank">[Video]</a>
             <span class="tag tag-type">Demo</span>
             <br />
-          </li>
-
-          <li class="paper-has-poster">
-            <div class="paper-item-layout">
-              <div class="paper-details">
-                <b>GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation</b><br />
-                <i
-                  >Proceedings of the Thirty-Ninth AAAI Conference on Artificial Intelligence - Demonstrations Track
-                  (AAAI-26 Demo), Singapore, January 2026 (AR=27%)</i
-                ><br />
-                Pallav Koppisetti, Nitin Gupta, Kausik Lakkaraju, Biplav Srivastava
-                <br />
-                <a href="papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank">[Paper]</a>
-                <a href="https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/view" target="_blank"
-                  >[Video]</a
-                >
-                <a href="papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank">[Poster]</a>
-                <span class="tag tag-type">Demo</span>
-                <span class="tag tag-method">Trust Rating</span>
-                <br />
-              </div>
-              <div class="paper-poster">
-                <a
-                  href="../spotlight/poster_GAICo.png"
-                  target="_blank"
-                  title="Click to view full poster"
-                  aria-label="View poster for GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation"
-                >
-                  <img
-                    src="../spotlight/poster_GAICo.png"
-                    alt="Poster thumbnail for GAICo: Demonstrating a Unified Framework for Multi-Modal GenAI Evaluation"
-                  />
-                </a>
-              </div>
-            </div>
           </li>
 
           <li class="paper-has-poster">
@@ -206,13 +187,14 @@
               </div>
               <div class="paper-poster">
                 <a
-                  href="../spotlight/omega_poster_AAAI-2026.png"
+                  href="./posters/omega_poster_AAAI-2026.png"
                   target="_blank"
                   title="Click to view full poster"
                   aria-label="View poster for OMEGA: An Ontology-Driven Tool for Explaining Multi-Agent Path Finding"
                 >
                   <img
-                    src="../spotlight/omega_poster_AAAI-2026.png"
+                    loading="lazy"
+                    src="./posters/thumbnails/omega_poster_AAAI-2026.png"
                     alt="Poster thumbnail for OMEGA: An Ontology-Driven Tool for Explaining Multi-Agent Path Finding"
                   />
                 </a>
@@ -417,18 +399,40 @@
             <br />
           </li>
 
-          <li>
-            <b>Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data</b>
-            <br />
-            <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i><br />
-            Nitin Gupta, Bharath Muppasani, Saina Srivastava, Aarohi Goel, Ross Hartfield, Todd Buehrig, Melissa Reck,
-            Emma Kennedy, Kevin Poore, Karilyn Tremblay, Biplav Srivastava, Lucas Vasconcelos
-            <br />
-            <a href="https://ojs.aaai.org/index.php/AAAI/article/view/35260" target="_blank">[Paper]</a>
-            <span class="tag tag-type">Conference</span>
-            <span class="tag tag-method">Data Analysis</span>
-            <span class="tag tag-domain">Traffic</span>
-            <br />
+          <li class="paper-has-poster">
+            <div class="paper-item-layout">
+              <div class="paper-details">
+                <b
+                  >Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education
+                  Data</b
+                ><br />
+                <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i
+                ><br />
+                Nitin Gupta, Bharath Muppasani, Saina Srivastava, Aarohi Goel, Ross Hartfield, Todd Buehrig, Melissa
+                Reck, Emma Kennedy, Kevin Poore, Karilyn Tremblay, Biplav Srivastava, Lucas Vasconcelos
+                <br />
+                <a href="https://ojs.aaai.org/index.php/AAAI/article/view/35260" target="_blank">[Paper]</a>
+                <a href="./posters/AAAI-25_Student-Abstract_Poster.png" target="_blank">[Poster]</a>
+                <span class="tag tag-type">Conference</span>
+                <span class="tag tag-method">Data Analysis</span>
+                <span class="tag tag-domain">Traffic</span>
+                <br />
+              </div>
+              <div class="paper-poster">
+                <a
+                  href="./posters/AAAI-25_Student-Abstract_Poster.png"
+                  target="_blank"
+                  title="Click to view full poster"
+                  aria-label="View poster for Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data"
+                >
+                  <img
+                    loading="lazy"
+                    src="./posters/thumbnails/AAAI-25_Student-Abstract_Poster.png"
+                    alt="Poster thumbnail for Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data"
+                  />
+                </a>
+              </div>
+            </div>
           </li>
 
           <li>
@@ -518,7 +522,7 @@
                 Bharath Muppasani, Protik Nag, Vignesh Narayanan, Biplav Srivastava and Michael N. Huhns
                 <br />
                 <a href="https://openreview.net/forum?id=LYivxMp5es" target="_blank">[Paper]</a>
-                <a href="../spotlight/NeurIPS-24-Poster.png" target="_blank">[Poster]</a>
+                <a href="./posters/NeurIPS-24-Poster.png" target="_blank">[Poster]</a>
                 <span class="tag tag-type">Conference</span>
                 <span class="tag tag-method">Dynamical Systems</span>
                 <span class="tag tag-method">Automated Planning</span>
@@ -526,13 +530,14 @@
               </div>
               <div class="paper-poster">
                 <a
-                  href="../spotlight/NeurIPS-24-Poster.png"
+                  href="./posters/NeurIPS-24-Poster.png"
                   target="_blank"
                   title="Click to view full poster"
                   aria-label="View poster for Towards Effective Planning Strategies for Dynamic Opinion Networks"
                 >
                   <img
-                    src="../spotlight/NeurIPS-24-Poster.png"
+                    loading="lazy"
+                    src="./posters/thumbnails/NeurIPS-24-Poster.png"
                     alt="Poster thumbnail for Towards Effective Planning Strategies for Dynamic Opinion Networks"
                   />
                 </a>
@@ -659,13 +664,14 @@
               </div>
               <div class="paper-poster">
                 <a
-                  href="../spotlight/AAAI-IAAI-2024-ULTRA-Poster.png"
+                  href="./posters/AAAI-IAAI-2024-ULTRA-Poster.png"
                   target="_blank"
                   title="Click to view full poster"
                   aria-label="View poster for Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals"
                 >
                   <img
-                    src="../spotlight/AAAI-IAAI-2024-ULTRA-Poster.png"
+                    loading="lazy"
+                    src="./posters/thumbnails/AAAI-IAAI-2024-ULTRA-Poster.png"
                     alt="Poster thumbnail for Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals"
                   />
                 </a>
@@ -698,13 +704,14 @@
               </div>
               <div class="paper-poster">
                 <a
-                  href="../spotlight/AAAI-24_Demo_Poster.png"
+                  href="./posters/AAAI-24_Demo_Poster.png"
                   target="_blank"
                   title="Click to view full poster"
                   aria-label="View poster for Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning"
                 >
                   <img
-                    src="../spotlight/AAAI-24_Demo_Poster.png"
+                    loading="lazy"
+                    src="./posters/thumbnails/AAAI-24_Demo_Poster.png"
                     alt="Poster thumbnail for Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning"
                   />
                 </a>
@@ -984,13 +991,14 @@
               </div>
               <div class="paper-poster">
                 <a
-                  href="../spotlight/power-IAAI.jpg"
+                  href="./posters/power-IAAI.jpg"
                   target="_blank"
                   title="Click to view full poster"
                   aria-label="View poster for A Dataset and Baseline Approach for Identifying Usage States from Non-Intrusive Power Sensing With MiDAS IoT-based Sensors"
                 >
                   <img
-                    src="../spotlight/power-IAAI.jpg"
+                    loading="lazy"
+                    src="./posters/thumbnails/power-IAAI.jpg"
                     alt="Poster thumbnail for A Dataset and Baseline Approach for Identifying Usage States from Non-Intrusive Power Sensing With MiDAS IoT-based Sensors"
                   />
                 </a>
@@ -1082,10 +1090,11 @@
 
         <h2>2021</h2>
         <ul class="papers-list">
-
           <li>
-            <b>Did Chatbots Miss Their 'Apollo Moment'? A Survey of the Potential, Gaps and Lessons from Using 
-              Collaboration Assistants During COVID-19</b><br />
+            <b
+              >Did Chatbots Miss Their 'Apollo Moment'? A Survey of the Potential, Gaps and Lessons from Using
+              Collaboration Assistants During COVID-19</b
+            ><br />
             <i>Cell PATTERNS, 2021</i><br />
             Biplav Srivastava<br />
             <a href="https://www.sciencedirect.com/science/article/pii/S2666389921001513" target="_blank">[Paper]</a>
@@ -1093,8 +1102,8 @@
             <span class="tag tag-method">Chatbots</span>
             <span class="tag tag-domain">Health</span>
             <br />
-          </li> 
-          
+          </li>
+
           <li>
             <b>Thinking Fast and Slow in AI: the Role of Metacognition</b><br />
             <i>International Conference on Machine Learning, Optimization, and Data Science</i><br />
@@ -1210,4 +1219,3 @@
     </script>
   </body>
 </html>
-
