--- a/planfm/index.html
+++ b/planfm/index.html
@@ -40,7 +40,8 @@
     <section class="updates">
       <h2>Recent Updates</h2>
       <ul class="updates-list">
-        <li>Oct 2025 – A <a href='https://arxiv.org/abs/2508.16753' target="_blank">paper</a> on <a href='https://pypi.org/project/GAICo/' target="_blank"><b>GAICo</b></a> has been accepted for presentation at <a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">Innovative Applications of Artificial Intelligence</a> (IAAI/AAAI-2026), January 2026.</li>
+        <li>Jan 2026 – A <a href='https://arxiv.org/abs/2508.16753' target="_blank">paper</a> on <a href='https://pypi.org/project/GAICo/' target="_blank"><b>GAICo</b></a> was presented at <a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">Innovative Applications of Artificial Intelligence</a> (IAAI/AAAI-2026), January 2026. 
+            Another paper (demo track) was presented as well at AAAI2026. </li>
         <li>Sep 2025 – A <a href='https://arxiv.org/abs/2508.20437' target="_blank">paper</a> on foundation Models (FMs), time series forecasting (PL task), and automated explanations has been accepted for presentation 
                     at <a href='https://sites.google.com/view/aaai-atracc' target="_blank">AAAI2025 Fall Symposium 
                     on AI Trustworthiness and Risk Assessment for Challenged Contexts (ATRACC), Nov 2025 </a>.</li>
@@ -95,6 +96,7 @@
 </body>
 
 </html>
+
 
 
 
