--- a/planfm/index.html
+++ b/planfm/index.html
@@ -48,7 +48,7 @@
                   >[Video]</a
                 >
                 <a href="../publications/posters/poster_GAICo.png" target="_blank">[Poster]</a>) 
-                was presented as well at AAAI2026. </li>
+                was presented too at AAAI2026. </li>
         
         <li>Sep 2025 – A <a href='https://arxiv.org/abs/2508.20437' target="_blank">paper</a> on foundation Models (FMs), time series forecasting (PL task), and automated explanations has been accepted for presentation 
                     at <a href='https://sites.google.com/view/aaai-atracc' target="_blank">AAAI2025 Fall Symposium 
@@ -104,6 +104,7 @@
 </body>
 
 </html>
+
 
 
 
