--- a/planfm/publications.html
+++ b/planfm/publications.html
@@ -103,7 +103,10 @@
       <div class="pub-entry">
         <h3 class="pub-title">Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications</h3>
         <p class="pub-authors">Bharath Muppasani, Nitin Gupta, Vishal Pallagani, Biplav Srivastava, Raghava Mutharaju, Michael N. Huhns and Vignesh Narayanan</p>
-        <p class="pub-venue">Accepted at <strong>Eighth International Conference on Data Science and Management of Data (CODS-COMAD '24), India, 2024</strong></p>
+            Journal version - <p class="pub-venue"><strong> Discov Data 3, 55 (2025)</strong>
+            <a href="https://link.springer.com/article/10.1007/s44248-025-00093-9" target="_blank">[Paper]</a>
+            <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a></p>
+        Conference version - <p class="pub-venue"><strong>Eighth International Conference on Data Science and Management of Data (CODS-COMAD '24), India, 2024</strong></p>
         <div class="pub-links">
           <a href="https://ai4society.github.io/publications/papers_local/CODS_24_AI_Planning_Ontology.pdf" target="_blank">[Paper]</a>
           <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
@@ -121,5 +124,6 @@
 </body>
 
 </html>
+
 
 
