Update index.html with new project updates and funding
Added recent updates and funding information to the PlanFM project page.

--- a/planfm/index.html
+++ b/planfm/index.html
@@ -49,6 +49,13 @@
                 >
                 <a href="../publications/posters/poster_GAICo.png" target="_blank">[Poster]</a>) 
                 was presented too at AAAI2026. </li>
+
+
+           <li>Dec 2025 – A journal paper on building and using planning ontology for generating explanations was published in 
+              Discov Data 3, 55 (2025) <a href="https://link.springer.com/article/10.1007/s44248-025-00093-9" target="_blank">[Paper]</a>
+            <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
+           </li>
+        
         
         <li>Sep 2025 – A <a href='https://arxiv.org/abs/2508.20437' target="_blank">paper</a> on foundation Models (FMs), time series forecasting (PL task), and automated explanations has been accepted for presentation 
                     at <a href='https://sites.google.com/view/aaai-atracc' target="_blank">AAAI2025 Fall Symposium 
@@ -104,6 +111,7 @@
 </body>
 
 </html>
+
 
 
 
