--- a/planfm/index.html
+++ b/planfm/index.html
@@ -51,9 +51,10 @@
                 was presented too at AAAI2026. </li>
 
 
-           <li>Dec 2025 – A journal paper on building and using planning ontology for generating explanations was published in 
-              Discov Data 3, 55 (2025) <a href="https://link.springer.com/article/10.1007/s44248-025-00093-9" target="_blank">[Paper]</a>
-            <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
+           <li>Dec 2025 – A  <a href="https://link.springer.com/article/10.1007/s44248-025-00093-9" target="_blank">paper</a> on 
+               building and using planning ontology for generating explanations was published in 
+              Discov Data 3, 55 journal (2025) 
+            <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>.
            </li>
         
         
@@ -111,6 +112,7 @@
 </body>
 
 </html>
+
 
 
 
