Fix formatting issues in index.html

--- a/planfm/index.html
+++ b/planfm/index.html
@@ -42,8 +42,8 @@
       <ul class="updates-list">
         
         <li>Jan 2026 – A <a href='https://arxiv.org/abs/2508.16753' target="_blank">paper</a> on <a href='https://pypi.org/project/GAICo/' target="_blank"><b>GAICo</b></a> was presented at <a href='https://aaai.org/conference/aaai/aaai-26/iaai-26-call/' target="_blank">Innovative Applications of Artificial Intelligence</a> (IAAI/AAAI-2026), January 2026. 
-            Another paper (demo track 
-                 <a href="../publications/papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank">[Paper]</a>
+            Another <a href="../publications/papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank">paper</a> 
+              (demo track 
                 <a href="https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/view" target="_blank"
                   >[Video]</a
                 >
@@ -112,6 +112,7 @@
 </body>
 
 </html>
+
 
 
 
