Update print statement from 'Hello' to 'Goodbye'

--- a/publications/index.html
+++ b/publications/index.html
@@ -128,7 +128,7 @@
                 <a href="https://drive.google.com/file/d/1m93agi6H4-HDpIvZCiYOOw6RpYEIQbvD/view" target="_blank"
                   >[Video]</a
                 >
-                <a href="papers_local/GAICO-Demo-AAAI2026.pdf" target="_blank">[Poster]</a>
+                <a href="posters/poster_GAICo.png" target="_blank">[Poster]</a>
                 <span class="tag tag-type">Demo</span>
                 <span class="tag tag-method">Trust Rating</span>
                 <br />
@@ -1219,3 +1219,4 @@
     </script>
   </body>
 </html>
+
