Revise dissertation defense announcement in index.html
Updated the dissertation announcement with a link and corrected the phrasing.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
             <div class="timeline-content">
               <p>
                 <a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a>
-                will defend his dissertation, "<i>Rating AI Models for Robustness Through a Causal Lens</i>", on Feb 04.
+                defended his dissertation, 
+                <a href="https://kausik-l.github.io/pages/dissertation.html" target="_blank">"<i>Rating AI Models for Robustness Through a Causal Lens</i>"</a>,
+                on Feb 04. 
               </p>
             </div>
           </div>
