Add book release information to timeline
Added a new timeline entry for a book release.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,16 @@
             <div class="timeline-dot"></div>
             <div class="timeline-date month">February</div>
 
+        <div class="timeline-content">
+          <p>
+            A book titled 
+            <a href="https://link.springer.com/book/10.1007/978-3-031-89853-2" target="_blank">
+              <i>'Assessing, Explaining, and Rating AI Systems for Trust - With Applications in Finance'</i></a>, is released 
+              by Springer Nature (<a href="https://www.amazon.com/dp/B0GM5GLZ87/" target="_blank">
+              Amazon).
+          </p>
+        </div>
+            
             <div class="timeline-content">
               <p>
                 <a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a>
