--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
           <p>
             A book titled 
             <a href="https://link.springer.com/book/10.1007/978-3-031-89853-2" target="_blank">
-              <i>'Assessing, Explaining, and Rating AI Systems for Trust - With Applications in Finance'</i></a>, is released 
-              by Springer Nature (<a href="https://www.amazon.com/dp/B0GM5GLZ87/" target="_blank">
-              Amazon).
+              <i>'Assessing, Explaining, and Rating AI Systems for Trust - With Applications in Finance'</i></a>, is 
+              being released by Springer Nature(<a href="https://www.amazon.com/dp/B0GM5GLZ87/" target="_blank">
+              Amazon</a>).
           </p>
         </div>
             
