Update index.html with new book and patent details
Added information about two published books and US patents.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             A book titled 
             <a href="https://link.springer.com/book/10.1007/978-3-031-89853-2" target="_blank">
               <i>'Assessing, Explaining, and Rating AI Systems for Trust - With Applications in Finance'</i></a>, is 
-              being released by Springer Nature(<a href="https://www.amazon.com/dp/B0GM5GLZ87/" target="_blank">
+              being released by Springer Nature (<a href="https://www.amazon.com/dp/B0GM5GLZ87/" target="_blank">
               Amazon</a>).
           </p>
         </div>
@@ -299,6 +299,19 @@
           <div class="spotlight-section">
             <div class="spotlight-section-header">
               <div class="spotlight-section-title">Research Spotlight</div>
+
+            <div class="spotlight-activity">
+              Two books published    
+              (<a href="https://link.springer.com/book/10.1007/978-3-031-89853-2" target="_blank">AI and elections</a>) and 
+              <a href="<a href="https://link.springer.com/book/10.1007/978-3-031-89853-2" target="_blank">" target="_blank">assessing and rating AI</a>).
+             Two US patents issued (<a
+                        href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12332873">US 12,332,873
+                        (awarded: June 2025)</a>,
+                         <a
+                        href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12067983">US 12,067,983
+                        (awarded: Aug 2024)</a>).
+            </div>
+              
               <span class="view-all-posters" onclick="openPosterPopup()">View all</span>
             </div>
 
