Refactor spotlight activity links formatting
Updated the formatting of the spotlight activity section to improve readability.

--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
 
             <div class="spotlight-activity">
               Two books published    
-              (<a href="https://link.springer.com/book/9783032210388" target="_blank">Assessing and rating AI</a>),
-               <a href="https://link.springer.com/book/10.1007/978-3-031-89853-2" target="_blank">AI and elections</a>; 
+              (<a href="https://link.springer.com/book/9783032210388" target="_blank">Assessing and rating AI</a>,
+               <a href="https://link.springer.com/book/10.1007/978-3-031-89853-2" target="_blank">AI and elections</a>); 
              two US patents issued (<a
                         href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12332873">US 12,332,873</a>, 
                          <a
